Fix scaling issue on mobile device

--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,22 @@ p {
 }
 
 .cell {
-  width: 12rem;
-  height: 8rem;
+  width: 120px;
+  height: 80px;
   background: #e3e3e3;
-  margin: 1rem;
+  margin: 10px;
   flex-shrink: 0;
 }
 
 .cell:first-child {
-  width: 23rem;
+  width: 230px;
 }
 
 .blank {
   background: none;
 }
 
-.fixed-1 {
+.fixed {
   width: 930px;
   background: #3e3e3e;
   margin: 0 10px;
@@ -48,7 +48,7 @@ p {
   position: sticky;
   left: 0;
   display: inline-block;
-  padding: 3rem 0;
+  padding: 30px 0;
 }
 
 .fixed-text {
